@@ -16,7 +16,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- $Id: nslookup.docbook,v 1.4 2004/08/20 00:54:29 marka Exp $ -->
+<!-- $Id: nslookup.docbook,v 1.4.2.1 2004/08/20 01:08:37 marka Exp $ -->
 
 <!--
  - Copyright (c) 1985, 1989
