@@ -1,3 +1,6 @@
+1700.	[func]		nslookup is no longer to be treated as deprecated.
+			Remove "deprecated" warning message.  Add man page.
+
 1699.	[bug]		dnssec-signzone can generate "not exact" errors
 			when resigning. [RT #12281]
 
